--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionicons.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -39,6 +40,7 @@
     <script src="modules/services/activityService.js"></script>
     <script src="modules/services/levelUserService.js"></script>
     <script src="modules/services/leaderboardService.js"></script>
+    <script src="modules/services/timeConversionService.js"></script>
     <script src="modules/services/fbLoginService.js"></script>
     <script src="modules/services/twitterLoginService.js"></script>
 
