--- a/www/modules/challenges/newChallenge.html
+++ b/www/modules/challenges/newChallenge.html
@@ -26,7 +26,7 @@
               <input type="text" name="taskName" placeholder="#V-ups" ng-model="task.name" required>
             </div>
             <div>
-              <span class="input-label">Points</span>
+              <span class="input-label">Points per Set</span>
               <input type="number" name="points" placeholder="50" ng-model="task.points" required>
             </div>
           </div>
