--- a/www/modules/challenges/oneChallenge.html
+++ b/www/modules/challenges/oneChallenge.html
@@ -1,6 +1,6 @@
-<ion-view title="Level {{_self.points}} points">
+<ion-view title="Challenges">
   <ion-nav-bar class="nav-title-slide-ios7">
-    <ion-nav-back-button class="button-icon ion-chevron-left"> Back</ion-nav-back-button>
+    <ion-nav-back-button class="button-icon ion-chevron-left"></ion-nav-back-button>
     <ion-nav-buttons side="right">
       <button class="button button-assertive" ng-click="deleteChallenge()" ng-show="challengeOwner">Delete</button>
     </ion-nav-buttons>
