--- a/www/modules/profile/charts.html
+++ b/www/modules/profile/charts.html
@@ -1,6 +1,6 @@
-<ion-view title="Level {{_self.points}}">
+<ion-view title="Level {{self.points}}">
   <ion-nav-bar class="nav-title-slide-ios7">
-    <ion-nav-back-button class="button-icon ion-chevron-left"> Back</ion-nav-back-button>
+    <ion-nav-back-button class="button-icon ion-chevron-left"></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="has-footer">
     <statchart ng-repeat="chart in charts" chart="chart"></statchart>
