--- a/www/modules/settings/settings.html
+++ b/www/modules/settings/settings.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view title="Settings">
   <ion-nav-bar class="nav-title-slide-ios7"></ion-nav-bar>
   <ion-content class="has-footer">
     <div class="list">
