--- a/www/modules/activity/activities.html
+++ b/www/modules/activity/activities.html
@@ -1,7 +1,7 @@
-<ion-view title="Level {{_self.points}}">
+<ion-view title="Activity">
   <ion-nav-bar class="nav-title-slide-ios7">
     <ion-nav-buttons side="right">
-      <button class="button button-energized" ng-click="openModal()">Post</button>
+      <button class="button button-icon icon ion-compose" ng-click="openModal()"></button>
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content class="has-footer">
