--- a/www/modules/activity/newPostPartial.html
+++ b/www/modules/activity/newPostPartial.html
@@ -1,4 +1,4 @@
-<div class="modal" title="New Challenge">
+<div class="modal" title="New Activity Post">
   <ion-header-bar>
     <h1 class="title">Create a new post!</h1>
   </ion-header-bar>
