--- a/www/modules/login/loginHome.html
+++ b/www/modules/login/loginHome.html
@@ -2,12 +2,12 @@
   <ion-content has-header="true" padding="true">
     <div class="list list-inset">
       <img class="logo" src="img/level.png">
-      <button class="button button-block button-light" ng-click="basicLogin()">
+<!--       <button class="button button-block button-light" ng-click="basicLogin()">
         <b>L</b> Level Login
       </button>
       <button class="button button-block button-light" ng-click="createAccount()">
         <b>L</b> Create a new account
-      </button>
+      </button> -->
       <button class="button button-block button-light" ng-click="facebookLogin()">
         <i class="icon ion-social-facebook"></i>
          Login with Facebook
