--- a/www/modules/profile/profile.html
+++ b/www/modules/profile/profile.html
@@ -44,7 +44,7 @@
         <p class="activity-text">
           Completed the challenge 
           <a ng-click="goToMyChallenge(challenge.myChallengeId)" class="activity-challenge">{{challenge.name}}</a>
-          for <b>{{challenge.totalPoints}}</b> points {{challenge.postTime}} ago
+          for <b>{{challenge.userPoints}}</b> points {{challenge.postTime}} ago
         </p>
       </div>
     </div>
