--- a/www/modules/challenges/allChallenges.html
+++ b/www/modules/challenges/allChallenges.html
@@ -4,17 +4,26 @@
       <button class="button button-icon icon ion-plus-round" ng-click="openModal()"></button>
     </ion-nav-buttons>
   </ion-nav-bar>
-  <ion-content class="has-footer">
-    <ion-refresher pulling-text="Pull to get new challenges" on-refresh="getChallenges()">
-    </ion-refresher>
-    <label class="item item-input">
+  <div class="bar bar-subheader item-input-inset">
+    <label class="item-input-wrapper">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="text" placeholder="Search" ng-model="search.name">
     </label>
+  </div>
+  <ion-content class="has-footer has-header has-subheader">
+    <ion-refresher pulling-text="Pull to get new challenges" on-refresh="getChallenges()">
+    </ion-refresher>
     <div class="list">
-      <ion-item ng-repeat="challenge in challenges | filter:search:strict" ng-click="goToChallenge(challenge.challengeId)">
-        <div>{{challenge.name}}</div>
-        <div class="ion-item-summary">{{challenge.description}}</div>
+      <ion-item class="item-avatar" ng-repeat="challenge in challenges | filter:search:strict" ng-click="goToChallenge(challenge.challengeId)">
+        <img src="{{challenge.userImg}}">
+        <div class="challenge-name">
+          {{challenge.name}} 
+          <span class="screen-name">{{challenge.screenName}}</span>
+        </div>
+        <div class="challenge-description">{{challenge.description}}</div>
+        <span class="badge badge-energized challenge-badge">
+          <i class="icon ion-trophy"> {{challenge.totalPoints}}</i>
+        </span>
       </ion-item>
     </div>
   </ion-content>
