--- a/www/modules/challenges/oneChallenge.html
+++ b/www/modules/challenges/oneChallenge.html
@@ -2,30 +2,43 @@
   <ion-nav-bar class="nav-title-slide-ios7">
     <ion-nav-back-button class="button-icon ion-chevron-left"></ion-nav-back-button>
     <ion-nav-buttons side="right">
-      <button class="button button-assertive" ng-click="deleteChallenge()" ng-show="challengeOwner">Delete</button>
+      <button class="button button-icon icon ion-close-round" ng-click="deleteChallenge()" ng-show="challengeOwner"></button>
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content class="has-footer">
-    <div class="padding">
-      <h2>{{challenge.name}}</h2>
-      <p>{{challenge.description}}</p>
-      <p>Challenge created by:</p>
-      <div>
-        <img src="{{challenge.userImg}}" class="challenge-image"> <b>{{challenge.screenName}}</b>
+    <div class="list">
+      <div class="item">
+        <div class="challenge-name-detailed">
+        {{challenge.name}}
+        </div>
+        <button class="right button button-icon save-challenge-button icon ion-ios7-heart-outline" ng-click="savedChallenge()"></button>
+        <span class="badge challenge-badge-detailed">
+          <i class="icon ion-trophy"> {{challenge.totalPoints}}</i>
+        </span>
+        <div class="user-container">
+          <img class="user-image-small" src="{{challenge.userImg}}">
+          <div class="user-name">
+          First Last
+          <span class="screen-name">{{challenge.screenName}}</span>
+          </div>
+        </div>
+        <div ng-if="!started" class="challenge-description-detailed">{{challenge.description}}</div>
+        <div ng-if="started" class="progress-bar-container">
+          <div class="progress-bar">
+            <div class="progress-bar-start"></div>
+            <div class="progress-bar-middle"><span style="width: {{challenge.progressBar}}" class="progress-bar-progress"></span></div>
+            <div ng-if="!challenge.completed" class="progress-bar-end"></div>
+            <div ng-if="challenge.completed" class="progress-bar-start"></div>
+          </div>
+          <p><b>{{challenge.userPoints}} of {{challenge.totalPoints}} pts earned</b></p>
+        </div>
       </div>
-      <div ng-show="!started">
-        <p>This challenge is worth: <b>{{challenge.totalPoints}} points</b></p>
-        <button class="button button-assertive" ng-click="startChallenge()">
-          Take the challenge!
+      <div class="item item-divider item-narrow" ng-if="!started">
+        <button class="button button-clear button-full" ng-click="startChallenge()">
+          <b>START THE CHALLENGE</b>
         </button>
       </div>
-      <div ng-show="started">
-        <progress class="challenge-progress" value="{{userPoints}}" max="{{challenge.totalPoints}}"></progress>
-        <p>Progress: <b>{{userPoints}} points</b> out of <b>{{challenge.totalPoints}} total points</b></p>
-      </div>
+      <exercise ng-repeat="exercise in challenge.tasks" exercise="exercise" challenge="challenge"></exercise>
     </div>
-    <div class="list">
-      <exercise ng-repeat="exercise in challenge.tasks" exercise="exercise"></exercise>
-    </div> 
   </ion-content>
 </ion-view>
