--- a/www/modules/activity/allActivities/newPostPartial.html
+++ b/www/modules/activity/allActivities/newPostPartial.html
@@ -6,8 +6,8 @@
     <div class="card">
       <form name="form.validation">
         <label class="item item-input item-stacked-label">
-          <span class="input-label">What have you got to say?</span>
-          <input type="text" name="text" placeholder="Training for the #LAMarathon today!" ng-model="modalData.text" required>
+          <span class="input-label">Post your workout!</span>
+          <input type="text" name="text" placeholder="#pushups 50 #pullups 20" ng-model="modalData.text" required>
         </label>
       </form>
     </div>
