--- a/www/modules/challenges/allChallenges/allChallenges.html
+++ b/www/modules/challenges/allChallenges/allChallenges.html
@@ -1,5 +1,6 @@
 <ion-view title="Challenges">
   <ion-nav-bar class="nav-title-slide-ios7">
+    <ion-nav-back-button class="button-icon ion-chevron-left"></ion-nav-back-button>
     <ion-nav-buttons side="right">
       <button class="button button-icon icon ion-plus-round" ng-click="openModal()"></button>
     </ion-nav-buttons>
