--- a/www/modules/user/leaderboard/leaderboard.html
+++ b/www/modules/user/leaderboard/leaderboard.html
@@ -1,6 +1,6 @@
 <ion-view title="Level {{_self.points}} points">
   <ion-nav-bar class="nav-title-slide-ios7">
-    <ion-nav-back-button class="button-icon ion-chevron-left"> Back</ion-nav-back-button>
+    <ion-nav-back-button class="button-icon ion-chevron-left"></ion-nav-back-button>
   </ion-nav-bar>
   <ion-content class="has-footer">
     <ion-list>
